--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Edit next line to provide your own name.
 title: Gabriel White | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://GabrielWhite808.github.io"
+url: "https://gabrielwhite808.github.io/GabrielWhite808/"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
